# train-ticket-management-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UNIFIED_TECHNICAL_SPEC_CN.tex  requirements.md  分工2.md
database/: schema_v1.sql  schema_v2.sql
demo/: CMakeLists.txt  dynamic_pricing_live_demo.cpp
docs/: README.md  maintainability-scan-2026-07-14.md  maintainability-scan-2026-07-15-develop.md  presentation-guidelines.md  系统流程图.md
docs/legacy/: !!!开发规范.md  TRIP_SCHEMA_V2.md
docs/superpowers/plans/: 2026-07-15-develop-readability-cleanup.md  2026-07-15-maintainability-cleanup.md
include/: account_management_dialog.h  app_style.h  database_manager.h  login_dialog.h  login_manager.h  main_window.h  operation_log_dialog.h  order_history_dialog.h  route_manager.h  station_management_dialog.h  statistics_dialog.h  statistics_manager.h  ticket_manage_dialog.h  ticket_manager.h  ticket_query_dialog.h  ticket_search_dialog.h  ticket_service_dialog.h  ticket_window.h  train_management_dialog.h  train_manager.h  transfer_dialog.h
include/database/: order_record.h  station_record.h  train_record.h  trip_record.h  user_record.h
resources/: app_icon.rc  resources.qrc
scr/ui/: app_style.cpp  transfer_dialog.cpp
src/: main.cpp  route_manager.cpp
src/database/: database_manager.cpp  database_manager_operation_log.cpp  database_manager_order.cpp  database_manager_seed.cpp  database_manager_station.cpp  database_manager_statistics.cpp  database_manager_ticket.cpp  database_manager_train.cpp  database_manager_trip.cpp  database_manager_user.cpp
src/login/: login_dialog.cpp  login_manager.cpp
src/statistics/: statistics_manager.cpp
src/ticket/: ticket_manager.cpp
src/train/: train_manager.cpp
src/ui/: account_management_dialog.cpp  app_style.cpp  main_window.cpp  main_window_legacy.cpp  operation_log_dialog.cpp  order_history_dialog.cpp  station_management_dialog.cpp  statistics_dialog.cpp  ticket_manage_dialog.cpp  ticket_query_dialog.cpp  ticket_search_dialog.cpp  ticket_service_dialog.cpp  ticket_window.cpp  train_management_dialog.cpp  train_management_dialog_support.cpp  train_management_dialog_support.h  train_management_dialog_train_ops.cpp  train_management_dialog_trip_ops.cpp  transfer_dialog.cpp
tests/: CMakeLists.txt  database_init_smoke_test.cpp  dynamic_pricing_live_demo.cpp  dynamic_pricing_smoke_test.cpp  login_account_management_test.cpp  login_role_permission_test.cpp  order_api_smoke_test.cpp  route_manager_test.cpp  station_api_smoke_test.cpp  statistics_smoke_test.cpp  tests.cpp  ticket_api_smoke_test.cpp  ticket_issue10_smoke_test.cpp  ticket_issue9_smoke_test.cpp  ticket_search_smoke_test.cpp  train_api_smoke_test.cpp  train_manager_smoke_test.cpp  user_api_smoke_test.cpp
